--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="fav.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="social pie, social network, social site, network, facebook, twitter, instagram, snapchat, website, webdevelopmenet site, new social site">
 	<meta name="description" content="Social Pie is a new and extraordinary social network.">
@@ -10,7 +11,7 @@
 <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/fontik-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
-<title>WEB</title>
+<title>Social Pie - Bill Carrol</title>
 </head>
 <body>
 
@@ -45,14 +46,16 @@
 </div>
 
 <div class="buttons">
+<nav>
 	<button type="button"><i class="fa fa-plus-circle"></i><b>ADD FRIEND</b></button>
+</nav>
 	<button type="button"><i class="fa fa-comments"></i><b>SEND MESSAGE</b></button>
 
 </div>
 
 
 
-	    				<!--profilofka--><img align="middle" width="180" height="180" src="bill.jpeg">
+<!--profilofka--><img align="middle" width="180" height="180" src="bill.jpeg">
 <div class="lista">
 <!--lista-->
 <div class="profile">
@@ -93,9 +96,8 @@ If you wanna work with me, you can send me PM or contact me on my email: bill@sh
 		<li><i class="fa fa-circle" aria-hidden="true"></i>Matyas Teply</li>
 </ul>
 	</div>
-
-
 	</div>
+
 
 
 </body>
