--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<a href="index.html"><b>REMOVE</b></a>
 
 	</div>
-	<i class="fa fa-ellipsis-h"></i>
+	<a href="#"><i class="fa fa-ellipsis-h"></i></a>
 
 </div>
 
@@ -54,8 +54,9 @@
 </div>
 
 
-
+<div class="profilofka">
 <!--profilofka--><img align="middle" width="180" height="180" src="bill.jpeg">
+</div>
 <div class="lista">
 <!--lista-->
 <div class="profile">
