--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ If you wanna work with me, you can send me PM or contact me on my email: bill@sh
 
 	 <p>I am Bill Shoustall and I'm the WEBDEVELOPER. Have a good day.</p>
 	</div>
-
+<!--
 	<div class="friends">
 		<h2>FRIENDS:</h2>
 		<br />
@@ -97,6 +97,16 @@ If you wanna work with me, you can send me PM or contact me on my email: bill@sh
 		<li><i class="fa fa-circle" aria-hidden="true"></i>Matyas Teply</li>
 </ul>
 	</div>
+<div class="groups">
+  <h2>GROUPS:</h2>
+  <br />
+  <ul type="none">
+    <li><i class="fa fa-profile"></i>Autisti</li>
+    <li><i class="fa fa-circle"></i>Borci</li>
+  </ul>
+</div>
+ !-->
+
 	</div>
 
 
